환불후 포인트 처리 버그 수정, alert css 적용

--- a/src/main/resources/static/assets/css/jquery.scheduler.css
+++ b/src/main/resources/static/assets/css/jquery.scheduler.css
@@ -105,7 +105,7 @@ body {
 
 .reservation-final {
   background: #fffff0;
-  background: linear-gradient(#3e9ee5, #216ccc);
+  background: linear-gradient(#C6DA52, #C6DA52);
   z-index: 2;
 }
 
